Fix squished up footer logo

--- a/disasterinfosite/static/style/app.scss
+++ b/disasterinfosite/static/style/app.scss
@@ -830,6 +830,7 @@ form:invalid {
 
 .geek-box-logo {
   margin: 0 auto;
+  height: 100%;
   width: 200px;
 
   @include breakpoint(medium-and-up) {
